kaizhengde v1.2.1 (items layout overflow fix)

--- a/src/components/item/item.module.css
+++ b/src/components/item/item.module.css
@@ -1,4 +1,4 @@
-.div
+.itemsContainer
 {
   display: flex;
   flex-direction: row;
@@ -9,9 +9,31 @@
   text-overflow: ellipsis;
 }
 
-.div.overflow
+.itemWithSeparator
+{
+  display: flex;
+  align-items: center;
+}
+
+.itemsContainer.overflow
 {
   flex-direction: column;
+  align-items: flex-start;
+}
+
+@media screen and (max-width: 767px)
+{
+  .itemsContainer
+  {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .itemWithSeparator
+  {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
 
 .a p,
