--- a/src/css/spans.css
+++ b/src/css/spans.css
@@ -1,6 +1,6 @@
 span.separator
 {
-  margin: 0 0.5rem;
+  margin: 0 0.5rem 0 0;
   padding: 0;
   font-size: 1.5rem;
   font-weight: var(--kai-font-weight-extra-light);
